<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_retries_delete_all"
        android:enabled="false"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_retries_retry_all"
        android:enabled="false"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_retry_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_retries_kill_all"
        android:enabled="false"
        android:icon="@drawable/ic_stop"
        android:title="@string/menu_kill_all"
        app:showAsAction="ifRoom" />
</menu>
